# agent-action-policy

./: CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml
src/action_policy/: __init__.py  decision.py  engine.py  loader.py  patterns.py  policy.py
src/action_policy/templates/: safe_browsing.yaml  safe_coding.yaml  safe_database.yaml  strict.yaml
tests/: test_e2e.py  test_engine.py  test_patterns.py  test_templates.py
